# 381903-3_Stetsenko_lab_8_9

./: .travis.yml  CMakeLists.txt  README.md
List/: List.cpp  List.h
QueueList/: CMakeLists.txt  QueueList.h
StackList/: CMakeLists.txt  StackList.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TQueueList.cpp  test_TStackList.cpp  test_main.cpp
